--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
 body {
@@ -15,7 +14,6 @@ code {
     monospace;
 }
 
-
 .scrollbar::-webkit-scrollbar {
   width: 1px;
   height: 1px;
@@ -23,14 +21,13 @@ code {
 
 .scrollbar::-webkit-scrollbar-track {
   border-radius: 100vh;
-  background: #F4F4F4;
+  background: #f4f4f4;
 }
 
 .scrollbar::-webkit-scrollbar-thumb {
   background: #e0cbcb;
   border: 3px solid #f6f7ed;
 }
-.box{
+.box {
   box-shadow: 0px 4px 10px 0px rgba(136, 136, 136, 0.25);
-
 }
